trustfall_derive/tests/ui/invalid_attr_as_path_only.stderr
error: unexpected attribute, did you mean `#[trustfall(skip_conversion)]`?
 --> tests/ui/invalid_attr_as_path_only.rs:5:5
  |
5 |     #[trustfall]
  |     ^^^^^^^^^^^^
