trustfall_derive/tests/ui/invalid_attr_as_path_only.rs
use trustfall_derive::TrustfallEnumVertex;

#[derive(Debug, Clone, TrustfallEnumVertex)]
enum TwoVariants {
    #[trustfall]
    First,
    Second,
}

fn main() {}
